<resources>
    <string name="app_name">Harmonía</string>
    import android.Manifest
    <string name="salirSubrrayado"><u>Salir</u></string>
    <string name="RegistrateSubrrayado"><u>¡Registrate!</u></string>
    <string name="NoRecuerdasLaContraseñaSubrayado"><u>¿No recuerdas la contraseña?</u></string>
    <string name="VolverInicioSesionSubrrayado"><u>Volver al inicio de sesión</u></string>
    <string name="VolverAEnviarSubrrayado"><u>Volver a enviar</u></string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="ayuda">Ayuda</string>
    <string name="cerrar_sesi">Cerrar sesión</string>
    <string name="default_web_client_id">1087712210246-pf3t0kpf6jo2fgjq8me6cmidn7s7f348.apps.googleusercontent.com</string>
    <string name="efectos_de_sonido">Música</string>
    <string name="sfx">Efectos de sonido</string>
    <string name="vibracion">Vibración</string>
    <string name="VolverModoJuego"><u>Volver a la página principal</u></string>
    <string name="channel_name">Harmonia_Channel</string>
    <string-array name="theme_options">
        <item>Predeterminado</item>
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_de_la_imagen">Descripción de la imagen</string>
    <string name="bienvenido">¡BIENVENIDO!</string>
    <string name="tu_viaje_musical_comienza_aqui">Tu viaje musical comienza aquí</string>
    <string name="introduce_el_email_y_la_contrase_a_para_iniciar_sesi_n">Introduce el email y la contraseña para iniciar sesión</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="profile">Perfil</string>
    <string name="home">Modos</string>
    <string name="settings">Configuración</string>
</resources>