<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_degradado"
    tools:context=".InicioSesionActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondoooo"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Logo -->

        <LinearLayout
            android:id="@+id/TituloLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- LinearLayout con ImageView y TextView -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginVertical="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- ImageView a la izquierda -->
                <ImageView
                    android:id="@+id/logoImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_aplicacion" />

                <!-- TextView a la derecha -->
                <TextView
                    android:id="@+id/titleTextView"
                    style="@style/Fuente_TimesNewRoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="  HARMONIA+"
                    android:textColor="@color/rosa"
                    android:textSize="45dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- TextView adicional debajo y centrado -->
            <TextView

                android:id="@+id/subTitleTextView"
                style="@style/Fuente_kameron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:text="Tu viaje musical comienza aquí"
                android:textColor="@color/morado"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout

            android:id="@+id/bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TituloLogo"

            tools:ignore="MissingConstraints">

            <TextView
                style="@style/Fuente_kameron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¡BIENVENIDO!"
                android:textColor="@color/rosa"
                android:textSize="40dp" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:contentDescription="Descripción de la imagen"
                android:src="@drawable/mano" />
        </LinearLayout>

        <!-- Descripción -->
        <TextView
            android:id="@+id/introduce"
            style="@style/Fuente_kameron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Introduce el email y la contraseña para iniciar sesión"
            android:textColor="@color/negro"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bienvenido"
            tools:ignore="UnknownId" />

        <!-- EditText 1 -->
        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edittextstyle"
            android:hint="E-mail"
            android:padding="16dp"
            android:textColor="@color/gris"
            android:textColorHint="@color/grisClaro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introduce"
            tools:ignore="UnknownId" />

        <!-- EditText 2 -->

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextstyle"
            android:textColor="@color/gris"
            android:textColorHint="@color/grisClaro"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />

        <!-- Google Iniciar Sesión -->

        <TextView
            android:id="@+id/recuerdasContrasena"
            style="@style/Fuente_kameron"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:clickable="true"
            android:onClick="clickNoRecuerdasLaContraseña"
            android:padding="10dp"
            android:text="@string/NoRecuerdasLaContraseñaSubrayado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <ImageView
            android:id="@+id/signGoogle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:contentDescription="Descripción de la imagen"
            android:src="@drawable/google_iniciar_sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recuerdasContrasena"
            tools:ignore="UnknownId" />

        <!-- Botón Iniciar Sesión -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botonIniciarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/degradado_button"
            android:onClick="clickCrearCuenta"
            android:padding="16dp"
            android:text="INICIAR SESIÓN"
            android:textColor="@color/blanco"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signGoogle"
            tools:ignore="InvalidId" />


        <!-- Salir -->

        <LinearLayout
            android:id="@+id/registrate"
            android:layout_width="262dp"
            android:layout_height="28dp"
            android:layout_gravity="bottom|center"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/botonIniciarSesion"
            tools:ignore="UnknownId">

            <TextView
                android:layout_width="wrap_content"
                style="@style/Fuente_kameron"
                android:textSize="14dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="¿No tienes una cuenta?"
                android:textColor="@color/negro"/>

            <TextView
                android:id="@+id/registrateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="irRegistrate"
                android:text="@string/RegistrateSubrrayado"
                android:textColor="@color/morado"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/salirTextView"
            style="@style/Fuente_kameron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:clickable="true"
            android:onClick="irSalir"
            android:padding="8dp"
            android:text="@string/salirSubrrayado"
            android:textColor="@color/negro"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
